GNOME Bugzilla – Bug 771161
Other Locations: Label misaligned on mount operation
Last modified: 2016-10-11 17:03:31 UTC
Created attachment 335230 [details] misaligned label (image) When a mount operation is active, ie, when the spinner is shown, the Label '/dev/something' is misaligned with the rest of the items. See the attachment for details
*** Bug 772345 has been marked as a duplicate of this bug. ***
Created attachment 336769 [details] [review] nautilusgtkplacesviewrow: stop busy_spinner from offsetting the other widgets when visible based on my speculation here: https://bugzilla.gnome.org/show_bug.cgi?id=772345 hey, it works!
btw, I'm sure that often in the past, if you cancelled out of the mount authentication dialog, then the busy_spinner would remain visible evermore... yet I can't get that to happen with my patch. either I was doing something different/wrong before, or maybe I just inadvertently solved something else too. :D
Created attachment 336771 [details] [review] nautilusgtkplacesviewrow: stop busy_spinner from offsetting the other widgets when visible This version adds ui code to make the spinner h/valign to centre, rather than the default fill, as the latter made it a bit too big. I also adjusted the halign on the eject_button to match, so the 2 widgets on different rows get aligned with each other horizontally.
Created attachment 336772 [details] screencast with patch applied, showing busy/eject/neither working as expected Here's a video of the patch, showing how busy_spinner now doesn't offset the other widgets + how it and eject_button still show when they should/don't when they shouldn't.
I just realised this would need to be patched in GTK+ too, so if this Nautilus one gets the go-ahead, I could prepare an equivalent patch for GTK+.
Created attachment 336782 [details] [review] nautilusgtkplacesviewrow: stop busy_spinner from offsetting the other widgets when visible forgot to #include "gtkstack.h"...
Created attachment 336784 [details] [review] nautilusgtkplacesviewrow: stop busy_spinner from offsetting the other widgets when visible fix one indent that accidentally got a tab instead of spaces
(In reply to djb from comment #7) > I just realised this would need to be patched in GTK+ too, so if this > Nautilus one gets the go-ahead, I could prepare an equivalent patch for GTK+. This actually only needs to be fixed in GTK+. A script is used to fetch the code and patch it up for use in Nautilus. This bug should have been reassigned to GTK+. Sorry you had to go through the trouble.
Review of attachment 336784 [details] [review]: As Ernestas said, this code has to be on gtk+, this is just a copy pasted code from gtkotherplacesview.c in gtk+ repository. But the idea behind it makes sense to me, so it shouldn't be so different from that, and most probably it's going to be easy to port this code there.
and thanks for the patch!
(In reply to Carlos Soriano from comment #12) > and thanks for the patch! Happy to help! Just noticed I need to fix up the <packing> position, so I'll do that and any other further updates on the GTK+ ticket.
Comment on attachment 336784 [details] [review] nautilusgtkplacesviewrow: stop busy_spinner from offsetting the other widgets when visible Marking this patch as obsolete because (A) the GTK+ ticket is the place for all this and (B) I just squashed an update to fix the <packing> position there: https://bugzilla.gnome.org/show_bug.cgi?id=772348
My patch just landed in GTK+, woo! Looking forward to it reaching Nautilus. :)
Created attachment 337450 [details] [review] gtkplacesview: update to latest code
Pushed to nautilus, thanks! Attachment 337450 [details] pushed as 397f0ff - gtkplacesview: update to latest code