gtkplacesview: update to latest code

https://bugzilla.gnome.org/show_bug.cgi?id=771161